- Added Georg to the authors list for his work on the setup script and adding hardware threads

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ University of Paderborn:
  * Markus Happe <markus.happe@upb.de>
  * Sebastian Meisner <sebastian.meisner@upb.de>
  * Christoph Rüthing <ruething@mail.upb.de>
+ * Georg Thombansen <thombaaang@gmail.com>
 
 ETH Zurich:
 
