Updated E-Mail address

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@ University of Paderborn:
  * Andreas Agne <agne@upb.de>
  * Markus Happe <markus.happe@upb.de>
  * Sebastian Meisner <sebastian.meisner@upb.de>
- * Christoph Rüthing <ruething@mail.upb.de>
+ * Christoph Rüthing <christoph@muppetnet.net>
  * Georg Thombansen <thombaaang@gmail.com>
 
 ETH Zurich:
